--- a/zh_TW.lang
+++ b/zh_TW.lang
@@ -77,7 +77,7 @@ item.itemFinder.name=探寶器
 item.Poke Ball.name=寶貝球
 item.Great Ball.name=超級球
 item.Ultra Ball.name=高級球
-item.Master Ball.name=掌門球
+item.Master Ball.name=大師球
 item.Level Ball.name=等級球
 item.Moon Ball.name=月亮球
 item.Friend Ball.name=友友球
@@ -165,7 +165,7 @@ item.Heat Badge.name=烈焰徽章
 item.Hive Badge.name=昆蟲徽章
 item.Icicle Badge.name=冰河徽章
 item.Knuckle Badge.name=拳擊徽章
-item.Marsh Badge.name=粉紅徽章
+item.Marsh Badge.name=黃金徽章
 item.Mind Badge.name=心靈徽章
 item.Mine Badge.name=礦山徽章
 item.Mineral Badge.name=鋼鐵徽章
@@ -174,7 +174,7 @@ item.Rainbow Badge.name=彩虹徽章
 item.Rain Badge.name=雨滴徽章
 item.Relic Badge.name=遺跡徽章
 item.Rising Badge.name=昇龍徽章
-item.Soul Badge.name=黃金徽章
+item.Soul Badge.name=粉紅徽章
 item.Stone Badge.name=岩石徽章
 item.Storm Badge.name=打擊徽章
 item.Thunder Badge.name=橘色徽章
@@ -287,6 +287,7 @@ item.Water Stone.name=水之石
 item.Moon Stone.name=月之石
 item.Thunder Stone.name=雷之石
 item.Leaf Stone.name=葉之石
+item.Dusk Stone.name=暗之石
 item.Thunder Stone Shard.name=雷之石碎片
 item.Leaf Stone Shard.name=葉之石碎片
 item.Water Stone Shard.name=水之石碎片
@@ -323,8 +324,8 @@ item.King's Rock.name=王者之證
 item.Protector.name=護身盔甲
 item.Up-Grade.name=升級卡片
 item.Razor Fang.name=銳利牙
-item.Dragon Scale.name=龍之鱗片
 item.RazorClaw.name=銳利爪子
+item.Dragon Scale.name=龍之鱗片
 item.AbsorbBulb.name=球根
 item.Life Orb.name=生命之玉
 item.Focus Sash.name=振奮精神的綁帶
@@ -3107,10 +3108,10 @@ achievement.HiddenPokeLootChieve=隱藏獎勵道具！
 achievement.HiddenPokeLootChieve.desc=找到一個隱藏獎勵道具！
 achievement.NormalPokeLootChieve=獎勵道具！
 achievement.NormalPokeLootChieve.desc=找到一個獎勵道具！
-achievement.LootMasterBallChieve=這就是掌門球！
-achievement.LootMasterBallChieve.desc=找到一個掌門球！！！
+achievement.LootMasterBallChieve=這就是大師球！
+achievement.LootMasterBallChieve.desc=找到一個大師球！！！
 achievement.GrottoChieve=這裡有一個通道...
-achievement.GrottoChieve.desc=找到一個隱藏洞穴！
+achievement.GrottoChieve.desc=找到一個隱藏樹洞！
 achievement.PokedexChieve=追求科技
 achievement.PokedexChieve.desc=製作一個神奇寶貝圖鑑。
 achievement.PokeballChieve=全部抓起來！
@@ -3282,11 +3283,11 @@ gui.screenpokechecker.texp=總經驗值
 gui.screenpokechecker.levelup=達到經驗值
 gui.screenpokechecker.summary=概要
 gui.screenpokechecker.ot=訓練師
-gui.screenpokechecker.ability=能力
+gui.screenpokechecker.ability=特性
 
 
 gui.screenpokechecker.happiness=親密度
-gui.screenpokechecker.nature=特性
+gui.screenpokechecker.nature=性格
 gui.screenpokechecker.growth=體型
 gui.screenpokechecker.forget1=你確定要讓
 gui.screenpokechecker.forget2=$p 忘卻
@@ -3590,6 +3591,7 @@ tile.Leaf Stone Ore.name=葉之石礦
 tile.Thunder Stone Ore.name=雷之石礦
 tile.Sun Stone Ore.name=太陽石礦
 tile.Dawn Stone Ore.name=霞礦
+tile.Dusk Stone Ore.name=暗之石礦
 tile.pixelmonSpawner.name=神奇寶貝怪物箱
 tile.master chest.name=大師箱
 tile.poke chest.name=寶貝箱
