Special texture statue

--- a/en_US.lang
+++ b/en_US.lang
@@ -4433,6 +4433,7 @@ enum.nature.timid=Timid
 
 enum.statuetex.originaltexture=Original
 enum.statuetex.shiny=Shiny
+enum.statuetex.special=Special
 enum.statuetex.stone=Stone
 enum.statuetex.gold=Gold
 enum.statuetex.bronze=Bronze
@@ -5805,6 +5806,7 @@ pixelmon.config.timedLootReuseSeconds=Reuse cooldown
 
 pixelmon.config.scaleGrassBattles=Scale grass battle levels to player
 pixelmon.config.blocksHaveLegendaries=Allow Legendaries from blocks
+pixelmon.config.useExternalBlockSpawnFiles=Use external block spawn files
 pixelmon.config.pokeGiftReusable=Poké Gifts reusable
 pixelmon.config.pokeGiftHaveEvents=Enable Poké Gift events
 pixelmon.config.eventPokeGiftLoad=Enable event Poké Gift spawning
@@ -6053,7 +6055,8 @@ pixelmon.config.minMusicDelay.comment=Minimum number of world ticks before a new
 pixelmon.config.maxMusicDelay.comment=Maximum number of world ticks before a new music track will start.
 
 pixelmon.config.scaleGrassBattles.comment=Scale grass battles to players' team levels?
-pixelmon.config.blocksHaveLegendaries.comment=Allows Legendaries to spawn from blocks (ie grass).
+pixelmon.config.blocksHaveLegendaries.comment=Allows Legendaries to spawn from blocks (i.e., grass).
+pixelmon.config.useExternalBlockSpawnFiles.comment=Use external block spawn files.
 pixelmon.config.pokeGiftReusable.comment=Enable multiple players to get the Pokemon from the gift.
 pixelmon.config.pokeGiftHaveEvents.comment=Allows Poke Gifts to be used (both placing and using, prevention against spam).
 pixelmon.config.eventPokeGiftLoad.comment=Should an event Poke Gift spawn?
